package com.example.attendancesystem.organization.grpc;

import com.example.attendancesystem.grpc.table.*;
import io.grpc.Status;
import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Table Service Implementation for gRPC
 * Currently provides placeholder implementations for all table management operations
 * This service will be fully implemented when table management functionality is added to the system
 */
@GrpcService
public class TableServiceImpl extends TableServiceGrpc.TableServiceImplBase {

    private static final Logger logger = LoggerFactory.getLogger(TableServiceImpl.class);

    @Override
    public void createTable(CreateTableRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - createTable called for: {}", request.getTableNumber());
        
        try {
            // TODO: Implement table creation when table models are added
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table creation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in createTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to create table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getTable(GetTableRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - getTable called for ID: {}", request.getId());
        
        try {
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table retrieval pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateTable(UpdateTableRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - updateTable called for ID: {}", request.getId());
        
        try {
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table update pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in updateTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void deleteTable(DeleteTableRequest request, StreamObserver<DeleteResponse> responseObserver) {
        logger.info("Table service - deleteTable called for ID: {}", request.getId());
        
        try {
            DeleteResponse response = DeleteResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table deletion pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in deleteTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to delete table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listTables(ListTablesRequest request, StreamObserver<ListTablesResponse> responseObserver) {
        logger.info("Table service - listTables called for organization: {}", request.getOrganizationId());
        
        try {
            ListTablesResponse response = ListTablesResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in listTables", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list tables: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateTableStatus(UpdateTableStatusRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - updateTableStatus called for ID: {} to status: {}", 
                   request.getId(), request.getStatus());
        
        try {
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table status update pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in updateTableStatus", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update table status: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void generateTableQrCode(GenerateTableQrCodeRequest request, StreamObserver<QrCodeResponse> responseObserver) {
        logger.info("Table service - generateTableQrCode called for table: {}", request.getTableId());

        try {
            QrCodeResponse response = QrCodeResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - QR code generation pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in generateTableQrCode", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to generate table QR code: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void validateTableQrCode(ValidateTableQrCodeRequest request, StreamObserver<QrCodeValidationResponse> responseObserver) {
        logger.info("Table service - validateTableQrCode called");

        try {
            QrCodeValidationResponse response = QrCodeValidationResponse.newBuilder()
                    .setValid(false)
                    .setMessage("Table service not implemented yet - QR code validation pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in validateTableQrCode", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to validate table QR code: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getAvailableTables(GetAvailableTablesRequest request, StreamObserver<ListTablesResponse> responseObserver) {
        logger.info("Table service - getAvailableTables called for organization: {}", request.getOrganizationId());

        try {
            ListTablesResponse response = ListTablesResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - available tables retrieval pending")
                    .setTotalCount(0)
                    .setPage(0)
                    .setSize(0)
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getAvailableTables", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get available tables: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getTablesByStatus(GetTablesByStatusRequest request, StreamObserver<ListTablesResponse> responseObserver) {
        logger.info("Table service - getTablesByStatus called for status: {}", request.getStatus());

        try {
            ListTablesResponse response = ListTablesResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - tables by status pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getTablesByStatus", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get tables by status: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void reserveTable(ReserveTableRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - reserveTable called for table: {}", request.getTableId());

        try {
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table reservation pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in reserveTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to reserve table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void releaseTable(ReleaseTableRequest request, StreamObserver<TableResponse> responseObserver) {
        logger.info("Table service - releaseTable called for table: {}", request.getTableId());

        try {
            TableResponse response = TableResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - table release pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in releaseTable", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to release table: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getTableQrCode(GetTableQrCodeRequest request, StreamObserver<QrCodeResponse> responseObserver) {
        logger.info("Table service - getTableQrCode called for table: {}", request.getTableId());

        try {
            QrCodeResponse response = QrCodeResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - get QR code pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getTableQrCode", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get table QR code: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void regenerateTableQrCode(RegenerateTableQrCodeRequest request, StreamObserver<QrCodeResponse> responseObserver) {
        logger.info("Table service - regenerateTableQrCode called for table: {}", request.getTableId());

        try {
            QrCodeResponse response = QrCodeResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Table service not implemented yet - regenerate QR code pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in regenerateTableQrCode", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to regenerate table QR code: " + e.getMessage())
                    .asRuntimeException());
        }
    }
}
